Adding FAQ data

--- a/src/app/organisation-faq/organisation-faq.component.css
+++ b/src/app/organisation-faq/organisation-faq.component.css
@@ -8,3 +8,34 @@
     right: 0;
     z-index: -1;
 }
+
+.headerSection {
+    height: 350px;
+    background-color: rgb(0, 43, 136);
+    margin-bottom: 60px;
+    align-items: center;
+}
+
+.headerSection h1 {
+    color: white;
+    font-size: 24px;
+    font-weight: normal;
+    margin-bottom: 0px;
+    padding: 0px 10px 0px 10px;
+}
+
+.headerSection h2 {
+    color: white;
+    font-size: 16px;
+    font-weight: normal;
+    padding: 0px 10px 0px 10px;
+    text-align: center;
+}
+
+.orgLogo {
+    height: 160px;
+    padding-top: 50px;
+}
+.orgLogo img {
+    height: 160px;
+}
