--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,3 +3,9 @@
 <p class="title">Welcome to Going Gone!</p>
 
 <app-organisation-list></app-organisation-list>
+
+<div class="adminLinkContainer">
+    <a routerLink="/admin">
+        Admin Page
+    </a>
+</div>
