--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -15,3 +15,11 @@
     font-size: 42px;
     color: black;
 }
+
+.adminLinkContainer {
+    text-align: center;
+}
+
+.adminLinkContainer a {
+    text-decoration: none;
+}
