--- a/src/app/lot-details/lot-details.component.css
+++ b/src/app/lot-details/lot-details.component.css
@@ -58,19 +58,18 @@ mat-card.lotDetailsCard.inputCard{
 }
 
 .lotDetailsCard mat-form-field {
-    flex-grow: 1;
+    flex: 1;
 }
 
 .lotDetailsCard button {
-    flex-grow: 1;
+    flex: 1;
+    min-width: 150px;
 }
 
 .containerRow{
     max-width: 980px;
     margin: 20px auto 20px !important;
     padding: 0px 10px 0px 10px;
-    flex-flow: row wrap;
-    justify-content:center;
 }
 
 .containerRow.secondRow{
@@ -82,7 +81,7 @@ mat-card.lotDetailsCard.inputCard{
     flex: 1 0 0;
     padding: 12px;
     align-items: center;
-    min-width: 350px;
+    /* min-width: 350px; */
 }
 
 .lotContentContainer .lotDetailsCard{
@@ -91,6 +90,7 @@ mat-card.lotDetailsCard.inputCard{
 
 .lotContentContainer img {
     width: 100%;
+    max-width: 600px;
 }
 
 .bidButton {
