--- a/src/app/organisation-lots/organisation-lots.component.css
+++ b/src/app/organisation-lots/organisation-lots.component.css
@@ -11,7 +11,6 @@
 
 h1 {
     color: white;
-    margin: 56px 0 0 0;
     padding: 20px;
     background-color: rgb(0, 43, 136);
     opacity: 0.9;
@@ -19,7 +18,7 @@ h1 {
     font-weight: normal;
     text-align: left;
     font-size: 20px;
-    margin-bottom: 60px;
+    margin: 56px 0 20px;
 }
 
 .sideNav {
@@ -30,5 +29,18 @@ h1 {
 .lots {
     margin: 20px;
     min-height: 350px;
+}
+
+.showSideNav {
+    text-decoration: underline;
+    margin-left: 10px;
+    cursor: pointer;
+    width: fit-content;
+}
+
+@media screen and (min-width: 600px) {
+    .showSideNav {
+        visibility: hidden;
+    }
 }
 
