--- a/src/app/organisation-lots/organisation-lots.component.css
+++ b/src/app/organisation-lots/organisation-lots.component.css
@@ -21,6 +21,11 @@ h1 {
     margin: 56px 0 20px;
 }
 
+button .menu {
+    position: relative;
+    top: -3px;
+}
+
 .sideNav {
     position: fixed;
     top: 56px;
@@ -30,17 +35,3 @@ h1 {
     margin: 20px;
     min-height: 350px;
 }
-
-.showSideNav {
-    text-decoration: underline;
-    margin-left: 10px;
-    cursor: pointer;
-    width: fit-content;
-}
-
-@media screen and (min-width: 600px) {
-    .showSideNav {
-        visibility: hidden;
-    }
-}
-
