--- a/src/app/bid-dialog/bid-dialog.component.html
+++ b/src/app/bid-dialog/bid-dialog.component.html
@@ -14,41 +14,28 @@
             </mat-form-field>
 
             <mat-form-field>
-                <input matInput placeholder="Full Name">
+                <input matInput placeholder="Full Name" required [(ngModel)]="fullName" name="fullName" #name="ngModel"
+                       maxlength="40">
+                <mat-error *ngIf="name.invalid && (name.dirty || name.touched)">
+                    Please enter your full name
+                </mat-error>
             </mat-form-field>
 
             <mat-form-field>
-                <input matInput placeholder="Email" [(ngModel)]="emailAddress" >
-                <!-- <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
+                <input matInput placeholder="Email" [(ngModel)]="emailAddress" id="email" name="email" #email="ngModel"
+                       required pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$" maxlength="50">
+                 <mat-error *ngIf="email.invalid && (email.dirty || email.touched)">
                     Please enter a valid email address
-                </mat-error> -->
+                </mat-error>
             </mat-form-field>
 
             <mat-form-field>
-                <input matInput placeholder="Telephone">
+                <input matInput placeholder="Phone" type="tel" [(ngModel)]="phone" name="phone" #phoneNum="ngModel"
+                       pattern="^[0-9-+s()]*$" required maxlength="20">
+                <mat-error *ngIf="phoneNum.invalid && (phoneNum.dirty || phoneNum.touched)">
+                    Please enter a valid phone number
+                </mat-error>
             </mat-form-field>
-
-
-            <!-- <div class="form-group">
-                <label for="amount">My Bid</label>
-                <input type="text" class="form-control" id="amount" value="£{{data.amount}}" readonly>
-            </div>
-
-            <div class="form-group">
-                <label for="email">Email Address*</label>
-                <input type="email" class="form-control" [(ngModel)]="emailAddress" id="email" name="email"
-                       #email="ngModel"
-                       required pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$"/>
-                <div class="validationErrorText" *ngIf="email.invalid && (email.dirty || email.touched)">
-                    <div *ngIf="email.errors.required">
-                        Email address is required
-                    </div>
-
-                    <div *ngIf="email.errors && email.errors.pattern">
-                        Email address is invalid
-                    </div>
-                </div>
-            </div> -->
 
             <div class="form-group">
                 <label for="card-info">Card Details</label>
