--- a/src/app/organisation/organisation.component.html
+++ b/src/app/organisation/organisation.component.html
@@ -83,7 +83,7 @@
                             <mat-icon>place</mat-icon>
                     </div>
                     <mat-card-title>Where</mat-card-title>
-                    <mat-card-subtitle>Some Address</mat-card-subtitle>
+                    <mat-card-subtitle>{{Organisation.address}}</mat-card-subtitle>
                 </mat-card-header>
                 <mat-card-content *ngIf="latitude && longitude">
                     <app-map-viewer [latitude]="latitude" [longitude]="longitude"></app-map-viewer>
