--- a/src/app/terms-and-conditions/terms-and-conditions.component.html
+++ b/src/app/terms-and-conditions/terms-and-conditions.component.html
@@ -8,4 +8,276 @@
 
 <div class="background"></div>
 
+<div class="content">
+    <div class="pageHeader">
+        <span>Terms and Conditions</span>
+    </div>
+
+    <div class="container terms">
+        <div class="row">
+            <p>
+                The following page outlines the terms and conditions under which you may use the Going Gone Silent
+                Auction and Pledge system either as a guest or a registered user. Please be sure to read these terms
+                carefully before using the system. Your usage of the system indicates that you agree to abide by these
+                terms and conditions. If there is any part of these terms and conditions that you do not agree to,
+                please exit the site immediately and consult advice from a representative of Going Gone.
+            </p>
+
+            <p>
+                Additionally, Going Gone reserves the right to modify these Terms at any time without prior
+                notification. Users must agree upon and abide by these changes accordingly. You are advised to review
+                these conditions periodically for any changes. Any use of our technology at any time constitutes full
+                acceptance of our service terms.
+            </p>
+
+            <p>You promise to fully indemnify us against any claim or demand or loss of any kind made by any third party
+                due to your use of our technology, or breach of these terms by you, your infringement of someone else’s
+                intellectual property rights or as a result of your use of our interactive features or our site as a
+                venue.</p>
+
+            <p><strong>Company Information</strong></p>
+
+            <p>
+                Going Gone Technology Services Limited (“We”) is a limited company registered in England and Wales under
+                company number 10678727. Our registered address is: Going Gone Technology Services Ltd, Hayles Bridge
+                Offices, 228 Mulgrave Road, Cheam, Surrey, SM2 6JT. The company is not VAT registered.
+            </p>
+
+            <p><strong>Usage of the System</strong></p>
+
+            <p>Access to our site is permitted on a temporary basis, and we reserve the right to withdraw or amend the
+                service we provide on our site without notice. We will not be liable if for any reason our site is
+                unavailable at any time or for any period.</p>
+
+            <p>We may issue you with a warning or limit, suspend or cancel your access to our site if you breach any of
+                these terms of use or our policies or other terms. We shall not be liable for any loss that you may
+                incur as a result of us taking such actions.</p>
+
+            <p><strong>Auction Rules and Restrictions</strong></p>
+            <em>Auction</em>
+            <ul>
+                <li>
+                    Bidders may bid for as many items as they require in the Silent Auction system.
+                </li>
+                <li>
+                    The winning bidder on each Item will be the person who has submitted the bid with the highest amount
+                    at the deadline of the auction.
+                </li>
+                <li>
+                    The winning bidder must pay for the items they have won once the auction is finished.
+                </li>
+            </ul>
+
+            <em>Eligible Bidders</em>
+            <ul>
+                <li>
+                    All bidders must be capable of forming legally binding liabilities under applicable law. The Going
+                    Gone bidding system may not be used by any individuals under the age of 18 years old and by any
+                    other individuals who are legally prohibited from, or otherwise incapable of, entering into binding
+                    contracts.
+                </li>
+                <li>
+                    Any bidder using the Going Gone technology is justified by so doing that they are legally entitled
+                    to do so.
+                </li>
+                <li>
+                    As bidder you agree that we gather certain personal data about you (See ‘Personal Information’
+                    section of this document for more details).
+                </li>
+
+            </ul>
+
+            <em>Auction Items</em>
+            <ul>
+                <li>The images and descriptions of the auction items are all representational and Going Gone has no
+                    liability if they do not are not represented accurately by the seller.
+                </li>
+                <li>It is the charity’s responsibility to ensure that descriptions and photographs are true to reality,
+                    and up-to-date. Going Gone does not guarantee on behalf of the charity, and will not be responsible
+                    for any damage or loss caused due to inaccurate or mismatch of bidders’ expectation of the auction
+                    items.
+                </li>
+                <li>Images are subjected to copyright of the image provider.</li>
+            </ul>
+
+            <em>Bidding Deadlines</em>
+            <ul>
+                <li>Deadlines for bids are decided by the charity and will not be extended under any circumstances. No
+                    bids will be accepted on an auction item after the deadline.
+                </li>
+                <li>When the auction closes, the winning bidder will be contacted by the charity either in person, via
+                    telephone or via email to make payment and organise the procurement of their items.
+                </li>
+
+            </ul>
+
+            <p><strong>Changes to the System</strong></p>
+
+            <p>
+                We are constantly improving our system, and may change the content at any time. If the need arises, we
+                may suspend access to our system, or close it indefinitely. Any of the material on our system may be out
+                of date at any given time, and we are under no obligation to update such material.
+            </p>
+            <p><strong>Liability</strong></p>
+            <p>This section limits and excludes our liability for your use of our site generally. Our policies and
+                specific terms cover your use of particular features provided on our site and contain limitations and
+                exclusions of liability specific to your use of those features.</p>
+            <p>The material displayed on our system is provided without any guarantees, conditions or warranties as to
+                its accuracy. To the extent permitted by law, we, our officers, agents, employees and other third
+                parties connected to us hereby expressly exclude:</p>
+
+            <ul>
+                <li>All conditions, warranties and other terms which might otherwise be implied by statute, common law
+                    or the law of equity.
+                </li>
+                <li>
+                    Any liability for any direct, indirect or consequential loss or damage incurred by any user in
+                    connection with our site or in connection with the use, inability to use, or results of the use of
+                    our site, any websites linked to it and any materials posted on it, including, without limitation
+                    any liability for:
+                    <ul>
+                        <li>loss of income or revenue;</li>
+                        <li>loss of business;</li>
+                        <li>loss of profits or contracts;</li>
+                        <li>loss of anticipated savings;</li>
+                        <li>loss of data;</li>
+                        <li>loss of goodwill;</li>
+                        <li>wasted management or office time;</li>
+                    </ul>
+                </li>
+            </ul>
+
+            <p>
+                and for any other loss or damage of any kind, however arising and whether caused by tort (including
+                negligence), breach of contract or otherwise, even if foreseeable, provided that this condition shall
+                not prevent claims for loss of or damage to your tangible property or any other claims for direct
+                financial loss that are not excluded by any of the categories set out above.
+            </p>
+
+            <p>You acknowledge that there may be occasions when our system or part of it is inaccessible or undergoes
+                maintenance and that such circumstances shall not constitute breach of our contract with you and that we
+                will not be liable to you for any loss or refund in such circumstances.</p>
+
+            <p>This does not affect our liability for death or personal injury arising from our negligence, nor our
+                liability for fraudulent misrepresentation or misrepresentation as to a fundamental matter, nor any
+                other liability which cannot be excluded or limited under applicable law.</p>
+
+            <p><strong>Cookies</strong></p>
+
+            <p>We may collect information about your computer, including your IP address, operating system and browser
+                type, for system administration.</p>
+            <p>
+                For the same reason, we may obtain information about your general internet usage by using a cookie file
+                which is stored on the hard drive of your computer. Cookies contain information that is transferred to
+                your computer’s hard drive. They help us to improve our site and to deliver a better and more
+                personalised service. They enable us:
+            </p>
+            <ul>
+                <li>
+                    To estimate our audience size and usage pattern.
+                </li>
+                <li>To store information about your preferences, and so allow us to customise our site according to your
+                    individual interests.
+                </li>
+                <li>To speed up your searches.</li>
+                <li>To recognise you when you return to our site.</li>
+            </ul>
+
+            <p>
+                Our servers may use two different types of cookies. The first type is known as a “session-based” cookie
+                and is allocated to your PC only for the duration of your visit to our website. It helps you to move
+                around the website faster. This cookie automatically expires when you close down your browser.
+            </p>
+            <p>
+                The second type of cookie known as a “persistent” cookie is allocated to your PC only if you agree by
+                selecting the “Remember me” function. This cookie, if chosen, will remain on your PC for a period of
+                time.
+            </p>
+            <p>By using our system you consent to our use of these cookies.</p>
+            <p>If you want to delete our cookies that are already on your computer, please refer to the instructions for
+                file management software to locate the file or directory that stores cookies. You will normally be able
+                to delete or control cookies via your browser.</p>
+            <p>
+                Please note that by rejecting or deleting our cookies you may not be able to access some areas or
+                features of our site.
+            </p>
+            <p>
+                You are not permitted to use your own cookies or other devices on or in connection with our site unless
+                you comply with all applicable law and in particular provide others users with an opportunity to
+                expressly consent or decline them.
+            </p>
+            <p><strong>Misuse of the System</strong></p>
+            <p>You must not misuse our system by knowingly introducing viruses, trojans, worms, logic bombs or other
+                material which is malicious or technologically harmful. You must not attempt to gain unauthorised access
+                to our site, the server on which our site is stored or any server, computer or database connected to our
+                site. You must not attack our site via a denial-of-service attack or a distributed denial-of service
+                attack.</p>
+            <p>By breaching this provision, you would commit a criminal offence under the Computer Misuse Act 1990. We
+                will report any such breach to the relevant law enforcement authorities and we will co-operate with
+                those authorities by disclosing your identity to them. In the event of such a breach, your right to use
+                our site will cease immediately.</p>
+            <p>
+                We will not be liable for any loss or damage caused by a distributed denial-of-service attack, viruses
+                or other technologically harmful material that may infect your computer equipment, computer programs,
+                data or other proprietary material due to your use of our site or to your downloading of any material
+                posted on it, or on any website linked to it.
+            </p>
+            <p><strong>Legal Terms</strong></p>
+            <p>These terms of use and the policies and documents referred to constitute the entire agreement between you
+                and us.</p>
+            <p>Section headings are for reference purposes only and do not limit the scope or extent of such
+                section.</p>
+            <p>If any part of these terms of use or our other policies or terms is held to be invalid or unenforceable,
+                such provision shall be struck out and the remaining provisions shall be enforced.</p>
+            <p>You acknowledge that if we do not enforce any particular provision, we are not waiving our right to do
+                so. We may take steps to enforce a provision at a later date. Our failure to act on a breach by you or
+                others does not waive our right to act on subsequent or similar breaches. We do not guarantee that we
+                will take action against any or all breaches of these terms of use.</p>
+            <p>
+                Any reference on our site to a statute, statutory provision or any subordinate legislation made under a
+                statute is to such statute, provision or subordinate legislation as amended or re-enacted from time to
+                time whether before or after the date of this agreement and, in the case of a statute, includes any
+                subordinate legislation made under that statute whether before or after the date of this agreement.
+            </p>
+            <p>Personal information</p>
+            <p>Going Gone bidding system requires you to enter certain personal information in order to make bids and or
+                pledges. The personal information we collect are your full name, email address and telephone number.
+                Personal information is required for identification, procurement of lot items and the collection of
+                payments.</p>
+            <p><strong>Use of personal information</strong></p>
+            <p>
+                All personal data collected is for Going Gone business operations and related charity partners at the
+                auction events. Your personal information may also be used for internal purposes such as auditing, data
+                analysis, and research to improve Going Gone products, services, and customer communications.
+            </p>
+            <p>Personal data protection</p>
+            <p>Going Gone follows the rigid international standards of personal data protection. Going Gone discloses
+                potentially personally-identifying information only to those of its auction administrators, employees,
+                contractors and affiliated organisations. </p>
+            <ul>
+                <li>Going Gone will not rent or sell potentially personally-identifying information to anyone.</li>
+                <li>
+                    Other than to its auction administrators, employees, contractors and affiliated organisations, as
+                    described above, Going Gone discloses potentially personally-identifying information only in
+                    response to a subpoena, court order or other government request, or when Going Gone believes in good
+                    faith that disclosure is reasonably necessary to protect the rights of Going Gone, third parties or
+                    the public at large.
+                </li>
+                <li>Going Gone takes all measures reasonably necessary to protect against the unauthorised access, use,
+                    alteration or destruction of potentially personally-identifying and personally-identifying
+                    information.
+                </li>
+            </ul>
+            <p><strong>Online Payments</strong></p>
+            <p>All payments with the auction items are done with Stripe payment system, a market leader in online
+                payments so guests can rest assured that their sensitive data is being handled correctly.</p>
+            <p><strong>Contact</strong></p>
+            <p>If you have any concerns about material which appears on our site please contact info@goinggone.io.
+            </p>
+        </div>
+
+
+    </div>
+</div>
+
 <app-footer [colour]="'#002B88'"></app-footer>
